k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voting-app
  labels:
    app: db
  name: db

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        runAsNonRoot: true

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: db

      containers:
        - image: postgres:15-alpine
          name: postgres

          ports:
            - containerPort: 5432
              name: postgres

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data

      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
